[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["Kosarevska <158058743+XenKos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
